chore: stickey navbar reformed. fix: project overflow fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -149,3 +149,30 @@ h6 {
 .animate-fadeOut {
     transform: translateY(-100%);
 }
+
+.animate-aurora {
+    animation: aurora 8s ease-in-out infinite alternate;
+}
+
+@keyframes aurora {
+    0% {
+        background-position: 0% 50%;
+        transform: rotate(-5deg) scale(0.9);
+    }
+    25% {
+        background-position: 50% 100%;
+        transform: rotate(5deg) scale(1.1);
+    }
+    50% {
+        background-position: 100% 50%;
+        transform: rotate(-3deg) scale(0.95);
+    }
+    75% {
+        background-position: 50% 0%;
+        transform: rotate(3deg) scale(1.05);
+    }
+    100% {
+        background-position: 0% 50%;
+        transform: rotate(-5deg) scale(0.9);
+    }
+}
